--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "AppMetricaPlugin",
+  "name": "AppMetricaCordovaPlugin",
   "version": "1.0.1",
   "description": "AppMetrica cordova plugin",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/mnill/AppMetricaCordovaPlugin"
-  },
   "cordova": {
     "id": "com.appmetrica.cordova.plugins.appmetrica",
     "platforms": [
       "android",
       "ios"
     ]
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://mnill@github.com/mnill/AppMetricaCordovaPlugin.git"
   },
   "keywords": [
     "cordova",
@@ -34,5 +34,9 @@
     }
   ],
   "author": "",
-  "license": "Apache 2.0"
+  "license": "Apache 2.0",
+  "bugs": {
+    "url": "https://github.com/mnill/AppMetricaCordovaPlugin/issues"
+  },
+  "homepage": "https://github.com/mnill/AppMetricaCordovaPlugin#readme"
 }
